# Copilot-Tools-Gateway

./: .gitignore  AGENTS.md  README.md  app.py  code-style.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: mcp.md
src/copilot_tools_gateway/: __init__.py  app_factory.py  cli.py  doctor.py  login.py  mcp_guidance.py  mcp_responses.py  mcp_server.py  settings.py
src/copilot_tools_gateway/api/: openai_format.py  prompt.py  schemas.py  server.py
src/copilot_tools_gateway/domain/: errors.py  json_types.py  models.py
src/copilot_tools_gateway/providers/: base.py  registry.py
src/copilot_tools_gateway/providers/consumer/: assisted_auth.py  auth.py  browser_image_chat.py  challenges.py  conversations.py  driver.py  history.py  message_frames.py  protocol.py  provider.py  uploads.py  vision_failures.py
src/copilot_tools_gateway/providers/m365/: assisted_auth.py  auth.py  capability_status.py  conversations.py  document_diagnostics.py  file_chat.py  history.py  protocol.py  provider.py  runtime.py  tokens.py  transport.py  unfurl.py  uploads.py  web_auth.py
tests/: test_consumer_challenges.py  test_consumer_diagnostics.py  test_consumer_history.py  test_consumer_image_protocol.py  test_consumer_provider.py  test_consumer_websocket_health_diagnostic.py  test_conversation_list_diagnostic.py  test_doctor.py  test_login_guidance.py  test_m365_assisted_auth.py  test_m365_attachment_matrix_diagnostic.py  test_m365_conversations.py  test_m365_history.py  test_m365_protocol.py  test_m365_tokens.py  test_m365_web_auth.py  test_mcp_responses.py  test_prompt.py  test_registry.py
tools/diagnostics/: capture_consumer_websocket_shape.py  check_consumer_conversation_resume.py  check_consumer_image_protocol_v2.py  check_consumer_websocket_health.py  check_conversation_list_protocol.py  check_m365_attachment_matrix.py  check_mcp_smoke.py  conversation_list_protocol_safety.py
