[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-tools-gateway"
version = "0.1.0"
description = "Local MCP and HTTP tools for Microsoft Copilot account capabilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Copilot Tools Gateway contributors" }]
dependencies = [
  "curl-cffi>=0.15",
  "fastapi>=0.110",
  "playwright>=1.40",
  "pydantic>=2.6",
  "uvicorn>=0.29",
  "websockets>=12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5",
]
mcp = [
  "mcp>=1.2",
]

[project.scripts]
copilot-tools-gateway = "copilot_tools_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
