[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-tools-gateway"
version = "0.2.0"
description = "Local MCP and HTTP tools for Microsoft Copilot account capabilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Copilot Tools Gateway contributors" }]
keywords = [
  "agentic-coding",
  "copilot",
  "mcp",
  "microsoft-365",
  "tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
]
dependencies = [
  "curl-cffi>=0.15",
  "fastapi>=0.110",
  "playwright>=1.40",
  "pydoll-python>=2.23",
  "pydantic>=2.6",
  "uvicorn>=0.29",
  "websockets>=12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5",
]
mcp = [
  "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/yurilopes/Copilot-Tools-Gateway"
Repository = "https://github.com/yurilopes/Copilot-Tools-Gateway"
Issues = "https://github.com/yurilopes/Copilot-Tools-Gateway/issues"
Documentation = "https://github.com/yurilopes/Copilot-Tools-Gateway/blob/main/docs/mcp.md"

[project.scripts]
copilot-tools-gateway = "copilot_tools_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
